--- a/public/quiz-test.html
+++ b/public/quiz-test.html
@@ -125,6 +125,9 @@
           <div class="answerInner">
             <!-- dynamic data -->
           </div>
+          <div class="selectionOptions">
+            <button data-val="None" onclick="handleNoneOfTheAbove()"class="selectionBtns selectionBtn" >None of the above</button>
+          </div>
         </div>
 
         <div class="row answerRow typeGeo" id="typeGeo" data-type="8">
