--- a/public/quiz-test.html
+++ b/public/quiz-test.html
@@ -280,6 +280,14 @@
       </div>
     </section>
 
+    <section id="terminate-section">
+      <div class="terminate-container">
+        <div class="terminate-info">
+            <!-- dynamic data here -->
+        </div>
+      </div>
+    </section>
+
     <section id="progressBarSection">
       <div class="container">
         <div class="row progressBar">
